# Nexus

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  SUPPORT.md  WINDOWS.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  on_air_report.md
.github/workflows/: ci.yml  release.yml
crates/ft1/: Cargo.toml
crates/ft1-sys/: Cargo.toml  build.rs
crates/ft4/: Cargo.toml
crates/ft8/: Cargo.toml
crates/modes/: Cargo.toml
crates/propagation/: Cargo.toml
crates/tempo-app/: Cargo.toml
crates/tempo-audio/: Cargo.toml
crates/tempo-audio/examples/: audio_probe.rs
crates/tempo-audio/src/: aicw.rs  aprsrx.rs  backend.rs  capture_resample.rs  device.rs  flexdax.rs  flexspectrum.rs  frames.rs  lib.rs  port_prober.rs  ports.rs  rig.rs  rigctld_proc.rs  rigctld_server.rs  rigmodels.rs  rotator.rs  rtty_afsk.rs  rtty_fsk.rs  rttyrx.rs  runtime.rs  serial_keyer.rs  service.rs  slot.rs  sstv_store.rs  sstvrx.rs  voice.rs  winkeyer.rs
crates/tempo-audio/src/civ/: broker.rs  commands.rs  diag.rs  engine.rs  mod.rs  scope.rs
crates/tempo-core/: Cargo.toml
crates/tempo-fast/: Cargo.toml
crates/tempo-fast-sys/: Cargo.toml  build.rs
crates/tempo-net/: Cargo.toml
crates/tempo-net/src/: cluster.rs  dxkeeper.rs  flexcat.rs  flexdisc.rs  flexvita.rs  lib.rs  mqtt.rs  n3fjp.rs  pskreporter.rs  qds.rs  server.rs  wsjtx.rs
crates/tempo-sstv/: Cargo.toml  LICENSE  NOTICE.md  README.md
crates/tempo-sstv/docs/: intentional-deviations.md
crates/tempo-sstv/src/: decoder.rs  demod.rs  dsp.rs  encode.rs  encode_pd.rs  encode_robot.rs  encode_scottie.rs  error.rs  fsk.rs  image.rs  lib.rs  mode_pd.rs  mode_robot.rs  mode_scottie.rs  modespec.rs  pd_test_encoder.rs  resample.rs  robot_test_encoder.rs  scottie_test_encoder.rs  snr.rs  sync.rs  test_tone.rs  tone.rs  vis.rs
crates/tempo-sstv/tests/: ariss_fram2_validation.md  multi_image.rs  nexus_acceptance.rs  no_vis.rs  roundtrip.rs  tx_loopback.rs  unknown_vis.rs
docs/: ARCHITECTURE.md  FREQUENCIES.md  FT1-Protocol.html  FT1-Protocol.md  OVERVIEW.md  RELEASE_NOTES-0.14.0.md  RELEASE_NOTES-0.15.0.md  RELEASE_NOTES-0.15.12.md  RELEASE_NOTES-0.15.14.md  Tempo-Product-Brief.html  Tempo-Product-Brief.md  TempoFast-Protocol.html  architecture-data-flow.md  faq.md  interop.md  multi-radio-rollback.md  quick-start.md
docs/guide/: index.md  operate-digital.md  settings-reference.md
docs/launch/: RELEASE_NOTES-0.3.0-beta.md  wsjtx-licensing-review.md
docs/manual/: Architecture-and-Protocol.md  Building-from-Source.md  CW.md  FAQ.md  Field-Day.md  Frequency-Plan.md  Getting-Started.md  Integrations.md  Logbook-and-Awards.md  Operate-FT8-FT4.md  Operating-Guide.md  Privacy-and-Coordinated-QSY.md  README.md  Rig-and-Audio-Setup.md  Roadmap.md  Tempo-Chat.md  Tiers-FT1-vs-DX1.md  Troubleshooting.md
docs/protocols/: dx1.md  ft1.md  index.md  tempodeep.md  tempofast.md
docs/rigs/: icom.md  xiegu.md  yaesu.md
libft1/: CMakeLists.txt  ft4_cabi.f90  ft8_cabi.f90  modem-state-manifest.toml
libft1/dx1/: dx1_band_test.f90  dx1_decode.f90  dx1_decode_all.f90  dx1_detect.f90  dx1_llr.f90  dx1_params.f90  dx1_sync.f90  dx1_test.f90  gen_dx1wave.f90
libft1/include/: libft1.h
libtempo/: CMakeLists.txt  ft4_cabi.f90  ft8_cabi.f90  mingw-w64.cmake  modem-state-manifest.toml  tempofast_cabi.f90
libtempo/include/: libtempo.h
libtempo/tempodeep/: gen_tempodeepwave.f90  tempodeep_band_test.f90  tempodeep_decode.f90  tempodeep_decode_all.f90  tempodeep_detect.f90  tempodeep_llr.f90  tempodeep_params.f90  tempodeep_sync.f90  (+1 more)
scripts/: Dockerfile.pi  build-linux.sh  build-windows-cross.sh  fetch-hamlib.sh  gen-banner.py  mirror-to-sourceforge.sh
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
tests/: acquire.c  ft4_acquire.c  ft8_acquire.c  roundtrip.c
ui/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
(+305 files in other folders)
