[package]
name = "tempo-net"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WSJT-X-compatible UDP network output + PSK Reporter spotting so third-party ham apps (JTAlert, GridTracker, N1MM, loggers) interoperate with Tempo. Pure Rust, std-only."

[dependencies]
